# QIP

./: .gitattributes  .gitignore  HAD_noMT.sh  README.md  finetuning.sh  finetuning_gnnbase.sh  finetuning_layernorm.sh  finetuning_lr_equal_prev.sh  finetuning_lr_equal_prev_dgx.sh  finetuning_lr_t1_prev.sh  finetuning_lr_t1_prev_dgx.sh  finetuning_lr_t2_prev.sh  finetuning_lr_t2_prev_dx.sh  finetuning_new.sh  finetuning_new_remain.sh  finetuning_split_task_cls.sh  finetuning_split_task_reg.sh  finetuning_temp.sh  from_HAD.sh  ft_only.sh  inference_script.py  install.sh  mt_gnnsearch.sh  multitask  multitask.sh  multitask_dacon.sh  multitask_dev.sh  multitask_features.sh  multitask_gnn_search.sh  multitask_layernorm.sh  multitask_lr_equal_prev.sh  multitask_lr_t1.sh  periodic_table.csv  preprocessing.py  pretraining_R.sh  pretraining_selfsup.sh  pyproject.toml  requirements.yaml  run.py  setup.py  (+1 more)
configs/: config.yaml
configs/callbacks/: default.yaml  early_stopping.yaml
configs/logger/: csv.yaml  mlflow.yaml  tensorboard.yaml  wandb.yaml
configs/mode/: inference.yaml  test.yaml  train.yaml
configs/system/: encoder_train.yaml
configs/trainer/: default.yaml  pretraining.yaml
qip/: __init__.py  inference.py  test.py  train.py
qip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qip/callbacks/: graph_size_tracker.py  logger.py  modelcheckpoint.py  progressbar.py
qip/datamodules/: __init__.py  datapipe.py  multi.py
qip/encoders/: __init__.py  (+3 more)
saved_model/: bbb_martins.ckpt  multitask_weight  multitask_weight_HAD.ckpt  pretrained_weight_HAD.pt
(+867 files in other folders)
